--- a/gui.kv
+++ b/gui.kv
@@ -8,10 +8,12 @@
             pos: self.pos
             size: self.size
 
+    # main container
     BoxLayout:
         orientation: "vertical"
         size: root.width, root.height
         padding: [15,20,15,20]
+        spacing: 36
 
         BoxLayout:
             id: main_header
@@ -19,13 +21,14 @@
             size_hint: 1, None
             height: self.minimum_height
 
-            canvas.before:
-                Color:
-                    rgba: (0,0,0,1)
-                Line:
-                    width: 1
-                    rectangle: self.x, self.y, self.width, self.height
+            # canvas.before:
+            #     Color:
+            #         rgba: (0,0,0,1)
+            #     Line:
+            #         width: 1
+            #         rectangle: self.x, self.y, self.width, self.height
 
+            # anime quote text
             Label:
                 id: anime_quote_text
                 text: "Anime Quote"
@@ -41,6 +44,7 @@
                 size_hint: None, None
                 size: self.texture_size
 
+            # info icon
             AnchorLayout:
                 anchor_x: "right"
                 pos: self.parent.pos
@@ -51,6 +55,45 @@
                     width: 24
                     height: 24
 
+        ScrollView:
+            do_scroll_x: False
+            do_scroll_y: True
 
-        BoxLayout:
-            orientation: 'vertical'
+            # main container
+            BoxLayout:
+                orientation: 'vertical'
+                spacing: 35
+
+                canvas.before:
+                    Color:
+                        rgba: (1,0,0,1)
+                    Line:
+                        rectangle: self.x, self.y, self.width, self.height
+
+                # tag chooser
+                ScrollView:
+                    do_scroll_x: True
+                    do_scroll_y: False
+
+                    BoxLayout:
+                        orientation: "horizontal"
+                        size_hint: None, None
+                        height: 35
+                        width: self.minimum_width
+
+                        canvas.before:
+                            Color:
+                                rgba: (0,1,1,1)
+                            Line:
+                                rectangle: self.x, self.y, self.width, self.height
+
+                    # BUTTONS HERE
+
+                BoxLayout:
+                    orientatino: "vertical"
+
+                    canvas.before:
+                        Color:
+                            rgba: (0,1,0,1)
+                        Line:
+                            rectangle: self.x, self.y, self.width, self.height
