--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -89,6 +89,9 @@ h1 {
 #page-container {
     margin-top: 35px;
     min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 35px
 }
 
 .quote-card {
@@ -126,10 +129,10 @@ h1 {
 }
 
 #footer {
-    position: absolute;
+    /* position: absolute;
     bottom: 0;
     left: 50%;
-    transform: translateX(-50%)
+    transform: translateX(-50%) */
 }
 #dev-container {
     display: flex;
