--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -21,9 +21,19 @@
 }
 
 body {
-    padding: 20px 15px;
+    /* padding: 20px 15px; */
     font-family: inter;
-    /* min-height: 100vh; */
+    position: relative;
+    min-height: 100vh;
+}
+
+#modal-barier {
+    display: none;
+    /* background-color: black; */
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
 }
 
 h1 {
@@ -36,7 +46,10 @@ h1 {
 #root {
     width: 100%;
     position: relative;
-    min-height: 200px
+    padding: 20px 15px;
+    box-sizing: border-box;
+    /* margin-bottom: 100px; */
+    /* min-height: 100vh; */
 }
 
 #main-header {
@@ -129,8 +142,10 @@ h1 {
 }
 
 #footer {
+    margin-top: 50px;
+    margin-bottom: 25px;
     /* position: absolute;
-    bottom: 0;
+    bottom: 10px;
     left: 50%;
     transform: translateX(-50%) */
 }
